  (see amportal.conf in source archive)
- Allow accountcode for IAX devices (again)
- Show custom extensions in FOP
- Allow mailbox setting for device to be set manually (for shared mailboxes)
- HINT extensions are now created for both FIXED and ADHOC devices
- Display AMP version in footer
- Support for remote mysql database
- ARI upgrade adds i18n and user settings
- Lots'o'bug fixes

1.10.009

- Asterisk Recording Interface (ARI).  ARI is a php interface to Voicemail and monitor recordings. (written by littlejohnconsulting.com)
- Queues can now play a "welcome" message to callers upon joining.
- DID Routes re-written as Inbound Routing.  This allows for DID specific fax emails and call answering options.
- RingGroups now use strategies: Ring All (default), Hunt, Memory Hunt
- Optional separation of Devices and Users (AMPEXTENSIONS option added to amportal.conf).  Devices are endpoints (ie: phones), and can be Fixed to a user, or Adhoc.  Users are extensions, with options like voicemail.  A user can log in to Adhoc devices by dialing *11, and log-off by dialing *12.
- Custom device technology support
- HINT priorities for FIXED devices
- Interface translated to French, German, Italian, Spanish
- FOP .21
- FOP button layout can now be sorted by last name or extension number

1.10.008

- Backup/Restore (schedule and restore backups)
- Extension Call Recording (inbound and outbound calls)
- Queue Call Recording (inbound to agents)
- Custom Trunks (use any Asterisk supported technology as a trunk)
- Remote Agents (join a Queue from any endpoint on a trunk)
- Outbound Route Password (require a password for certain outbound patterns)
- i18n (web interface can now be translated)
- ZAP trunk channels no longer hard-coded in retrieve_op_conf_from_mysql.pl
- *<exten> dials direct to voicemail()

1.10.007

- Added cvs2cl generated ChangeLog (see this for all changes and bug fixes)
- Added AMP Users (multi-department, multi-tenant)