@@ -12,6 +12,8 @@
 - Display AMP version in footer
 - Support for remote mysql database
 - ARI upgrade adds i18n and user settings
+- Remove Play Next option from voicemail options and default to
+  play next when deleting or saving voicemails
 - Lots'o'bug fixes
 
 1.10.009
